<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_large">

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dish_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/dish_type"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_title" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_dish_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        app:chipSpacingHorizontal="@dimen/spacing_small"
        app:chipSpacingVertical="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@+id/tv_dish_type_title"
        app:singleSelection="true" />

    <TextView
        android:id="@+id/tv_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/area"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_dish_type" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        app:chipSpacingHorizontal="@dimen/spacing_small"
        app:chipSpacingVertical="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@+id/tv_area_title"
        app:singleSelection="true" />

    <TextView
        android:id="@+id/tv_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/rating"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_area" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        app:chipSpacingHorizontal="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_title"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="0"
            android:text="All"
            android:textColor="@color/colorTextPrimary"
            app:chipBackgroundColor="@color/colorBackgroundDark" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="3+"
            android:textColor="@color/colorTextPrimary"
            app:chipBackgroundColor="@color/colorBackgroundDark" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="4"
            android:text="4+"
            android:textColor="@color/colorTextPrimary"
            app:chipBackgroundColor="@color/colorBackgroundDark" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="4.5"
            android:text="4.5+"
            android:textColor="@color/colorTextPrimary"
            app:chipBackgroundColor="@color/colorBackgroundDark" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_sort_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/sort_by"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_rating" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        app:chipSpacingHorizontal="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@+id/tv_sort_title"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="rating"
            android:text="@string/rating"
            android:textColor="@color/colorTextPrimary"
            app:chipBackgroundColor="@color/colorBackgroundDark" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="name"
            android:text="@string/name"
            android:textColor="@color/colorTextPrimary"
            app:chipBackgroundColor="@color/colorBackgroundDark" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="distance"
            android:text="@string/distance"
            android:textColor="@color/colorTextPrimary"
            app:chipBackgroundColor="@color/colorBackgroundDark" />

    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_sort">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_weight="1"
            android:text="@string/clear_filters"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply_filters"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
